--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /experiment1/checkpoints
 /experiment1/wandb
 /experiment1/__pycache__
+/experiment2/data
+/experiment2/checkpoints
+/experiment2/wandb
+/experiment2/__pycache__
